// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`B2B Input Group should not render a group error if the group is invalid and disabled 1`] = `
<b2b-input-group>
  <mock:shadow-root>
    <div class="b2b-input-wrapper">
      <slot name="start"></slot>
      <slot></slot>
      <slot name="end"></slot>
    </div>
    <span class="b2b-input-wrapper__hint">
      A group hint
    </span>
  </mock:shadow-root>
  <b2b-input class="b2b-input" disabled="" type="text">
    <mock:shadow-root>
      <b2b-input-label>
        <slot name="label">
          Search Term
        </slot>
      </b2b-input-label>
      <div class="b2b-input__wrapper b2b-input__wrapper--disabled">
        <slot name="start"></slot>
        <input class="b2b-input__native-input b2b-input__native-input--align-left b2b-input__native-input--disabled" disabled="" type="text">
        <slot name="end"></slot>
      </div>
    </mock:shadow-root>
  </b2b-input>
  <b2b-dropdown class="b2b-dropdown b2b-dropdown--disabled" disabled="">
    <mock:shadow-root>
      <div aria-expanded="false" class="b2b-dropdown__wrapper">
        <div class="b2b-dropdown__select" role="combobox">
          Select an option...
        </div>
      </div>
    </mock:shadow-root>
    <option value="data-1">
      Data Set 1
    </option>
    <option value="data-2">
      Data Set 2
    </option>
  </b2b-dropdown>
  <b2b-button class="b2b-button--100 b2b-button--fit-content" disabled="">
    <mock:shadow-root>
      <button class="b2b-button--primary" disabled="" type="button">
        <span>
          <slot name="start"></slot>
          <slot></slot>
          <slot name="end"></slot>
        </span>
      </button>
    </mock:shadow-root>
    Search
  </b2b-button>
</b2b-input-group>
`;

exports[`B2B Input Group should render a group error if one is specified and the group is invalid 1`] = `
<b2b-input-group>
  <mock:shadow-root>
    <div class="b2b-input-wrapper">
      <slot name="start"></slot>
      <slot></slot>
      <slot name="end"></slot>
    </div>
    <span class="b2b-input-wrapper__hint b2b-input-wrapper__hint--error">
      A group error
    </span>
  </mock:shadow-root>
  <b2b-input class="b2b-input b2b-input--error" invalid="" type="text">
    <mock:shadow-root>
      <b2b-input-label>
        <slot name="label">
          Search Term
        </slot>
      </b2b-input-label>
      <div class="b2b-input__wrapper">
        <slot name="start"></slot>
        <input class="b2b-input__native-input b2b-input__native-input--align-left" type="text">
        <slot name="end"></slot>
      </div>
    </mock:shadow-root>
  </b2b-input>
  <b2b-dropdown class="b2b-dropdown b2b-dropdown--error" invalid="">
    <mock:shadow-root>
      <div aria-expanded="false" class="b2b-dropdown__wrapper">
        <div class="b2b-dropdown__select" role="combobox">
          Select an option...
        </div>
      </div>
    </mock:shadow-root>
    <option value="data-1">
      Data Set 1
    </option>
    <option value="data-2">
      Data Set 2
    </option>
  </b2b-dropdown>
  <b2b-button class="b2b-button--100 b2b-button--fit-content">
    <mock:shadow-root>
      <button class="b2b-button--primary" type="button">
        <span>
          <slot name="start"></slot>
          <slot></slot>
          <slot name="end"></slot>
        </span>
      </button>
    </mock:shadow-root>
    Search
  </b2b-button>
</b2b-input-group>
`;

exports[`B2B Input Group should render a group hint if it is specified 1`] = `
<b2b-input-group>
  <mock:shadow-root>
    <div class="b2b-input-wrapper">
      <slot name="start"></slot>
      <slot></slot>
      <slot name="end"></slot>
    </div>
    <span class="b2b-input-wrapper__hint">
      A group hint
    </span>
  </mock:shadow-root>
  <b2b-input class="b2b-input" type="text">
    <mock:shadow-root>
      <b2b-input-label>
        <slot name="label">
          Search Term
        </slot>
      </b2b-input-label>
      <div class="b2b-input__wrapper">
        <slot name="start"></slot>
        <input class="b2b-input__native-input b2b-input__native-input--align-left" type="text">
        <slot name="end"></slot>
      </div>
    </mock:shadow-root>
  </b2b-input>
  <b2b-dropdown class="b2b-dropdown">
    <mock:shadow-root>
      <div aria-expanded="false" class="b2b-dropdown__wrapper">
        <div class="b2b-dropdown__select" role="combobox">
          Select an option...
        </div>
      </div>
    </mock:shadow-root>
    <option value="data-1">
      Data Set 1
    </option>
    <option value="data-2">
      Data Set 2
    </option>
  </b2b-dropdown>
  <b2b-button class="b2b-button--100 b2b-button--fit-content">
    <mock:shadow-root>
      <button class="b2b-button--primary" type="button">
        <span>
          <slot name="start"></slot>
          <slot></slot>
          <slot name="end"></slot>
        </span>
      </button>
    </mock:shadow-root>
    Search
  </b2b-button>
</b2b-input-group>
`;

exports[`B2B Input Group should render content wrapped in the input group 1`] = `
<b2b-input-group>
  <mock:shadow-root>
    <div class="b2b-input-wrapper">
      <slot name="start"></slot>
      <slot></slot>
      <slot name="end"></slot>
    </div>
  </mock:shadow-root>
  <b2b-input class="b2b-input" type="text">
    <mock:shadow-root>
      <b2b-input-label>
        <slot name="label">
          Search Term
        </slot>
      </b2b-input-label>
      <div class="b2b-input__wrapper">
        <slot name="start"></slot>
        <input class="b2b-input__native-input b2b-input__native-input--align-left" type="text">
        <slot name="end"></slot>
      </div>
    </mock:shadow-root>
  </b2b-input>
  <b2b-dropdown class="b2b-dropdown">
    <mock:shadow-root>
      <div aria-expanded="false" class="b2b-dropdown__wrapper">
        <div class="b2b-dropdown__select" role="combobox">
          Select an option...
        </div>
      </div>
    </mock:shadow-root>
    <option value="data-1">
      Data Set 1
    </option>
    <option value="data-2">
      Data Set 2
    </option>
  </b2b-dropdown>
  <b2b-button class="b2b-button--100 b2b-button--fit-content">
    <mock:shadow-root>
      <button class="b2b-button--primary" type="button">
        <span>
          <slot name="start"></slot>
          <slot></slot>
          <slot name="end"></slot>
        </span>
      </button>
    </mock:shadow-root>
    Search
  </b2b-button>
</b2b-input-group>
`;
